# ppgca-cd-2026-project

./: .env.example  .gitignore  README.md  pyproject.toml
data/quarantine/: emendas_invalidas.parquet
notebooks/: eda_modelagem.html  eda_modelagem.qmd
reports/: dicionario_dados.md  eda_qualidade.qmd  quality_report.md
schemas/: schema.py
src/: build_mart.py  ingest.py  transform.py
